--- a/ex2/desafio.css
+++ b/ex2/desafio.css
@@ -3,6 +3,8 @@
 }
 
 *{
+
+  
     margin-bottom: 0;
     margin-top: 0;
     
@@ -29,7 +31,7 @@ header{
 
 
 .conteudo{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex: row;
 }
@@ -207,5 +209,22 @@ table{
 table th{
   background-color: black;
   color: white;
+}
+
+
+footer{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+
+footer a {
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover{
+  color:rgb(71, 238, 250)
 }
 
