--- a/ex2/sobre.css
+++ b/ex2/sobre.css
@@ -106,3 +106,20 @@ footer{
     background-color: violet;
 }
 
+
+footer{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+  }
+  
+  footer a {
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+  }
+  
+  footer a:hover{
+    color:rgb(71, 238, 250)
+  }
+  
