--- a/ex2/style.css
+++ b/ex2/style.css
@@ -195,3 +195,20 @@ footer{
     transform: scale(1.1);
     transition: all 0.5s;
   }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+  }
+  
+  footer a {
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+  }
+  
+  footer a:hover{
+    color:rgb(71, 238, 250)
+  }
+  
